added a reset button and a function that changes the color to a random RGB color

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href = 'style.css'>
 </head>
 <body>
-    <div class = 'main_container'>
-
+    <div class = 'main_body'>
+        <div class = 'header'><button class = set>Set grid</button></div>
+        <div class = 'main_container'></div>
     </div>
     
 </body>
